--- a/sra_wastewater.ipynb
+++ b/sra_wastewater.ipynb
@@ -1219,8 +1219,8 @@
     "            id='sra_sankey',\n",
     "            figure=fig\n",
     "        )\n",
-    "    ], style={'width': '90%', 'display': 'inline-block', 'padding': '10 20'}),\n",
-    "], style={'margin': '10 20'})\n",
+    "    ], style={'width': '90%', 'display': 'inline-block', 'padding': '10px 20px'}),\n",
+    "], style={'margin': '10px 20px'})\n",
     "\n",
     "\n",
     "@app.callback(\n",
