add function for exporting SRA

--- a/sra_wastewater.ipynb
+++ b/sra_wastewater.ipynb
@@ -12,6 +12,7 @@
     "import dash_core_components as dcc\n",
     "import dash_bootstrap_components as dbc\n",
     "import dash_html_components as html\n",
+    "import dash_table\n",
     "from dash.dependencies import Input, Output\n",
     "import pandas as pd"
    ]
@@ -476,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +514,7 @@
        "Length: 146, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,17 +525,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_41523/3058443914.py:1: FutureWarning:\n",
-      "\n",
-      "Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
-      "\n"
+      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_61261/3058443914.py:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "  df_sra.describe(include='all')\n"
      ]
     },
     {
@@ -978,7 +977,7 @@
        "[13 rows x 148 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1085,7 @@
        "freq           16538     24677                           9832  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,12 +1093,13 @@
    "source": [
     "df = df_sra[['Run', 'BioSample', 'BioProject', 'geo_loc_name_country']+dimensions_display]\n",
     "df = df.fillna('N/A')\n",
+    "ddf = df\n",
     "df.describe(include='all')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1194,6 +1194,7 @@
     "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
     "\n",
     "input_list = dropdown_div(dimensions_dict)\n",
+    "\n",
     "fig = fig_parallel_categories(df, dimensions_display, 'Assay Type')\n",
     "\n",
     "app.layout = html.Div([\n",
@@ -1220,6 +1221,10 @@
     "            figure=fig\n",
     "        )\n",
     "    ], style={'width': '90%', 'display': 'inline-block', 'padding': '10px 20px'}),\n",
+    "    html.Div([\n",
+    "        dbc.Button(\"Export SRA\", color=\"primary\", id=\"btn_csv\", className=\"mr-1\"),\n",
+    "        dcc.Download(id=\"download-dataframe-csv\")\n",
+    "    ]),\n",
     "], style={'margin': '10px 20px'})\n",
     "\n",
     "\n",
@@ -1250,6 +1255,15 @@
     "    fig = fig_parallel_categories(ddf, dimensions_display, colored_column)\n",
     "\n",
     "    return fig, get_stats(ddf)\n",
+    "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(\"download-dataframe-csv\", \"data\"),\n",
+    "    Input(\"btn_csv\", \"n_clicks\"),\n",
+    "    prevent_initial_call=True,\n",
+    ")\n",
+    "def func(n_clicks):\n",
+    "    return dcc.send_data_frame(df_sra[df_sra.Run.isin(ddf.Run)].to_csv, \"sra_wastewater.csv\")\n",
     "\n",
     "\n",
     "# Run app and display result inline in the notebook\n",
