fix exporting sra

--- a/sra_wastewater.ipynb
+++ b/sra_wastewater.ipynb
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1238,6 +1238,7 @@
     "    Input('country', 'value'),\n",
     "    Input('colored_column', 'value'))\n",
     "def update_graph(assay_type, library_source, platform, continent, country, colored_column):\n",
+    "    global ddf\n",
     "    ddf = df\n",
     "    if assay_type:\n",
     "        ddf = ddf[ddf[dimensions_dict['assay_type']]==assay_type]\n",
@@ -1263,7 +1264,11 @@
     "    prevent_initial_call=True,\n",
     ")\n",
     "def func(n_clicks):\n",
-    "    return dcc.send_data_frame(df_sra[df_sra.Run.isin(ddf.Run)].to_csv, \"sra_wastewater.csv\")\n",
+    "    global ddf\n",
+    "    return dcc.send_data_frame(\n",
+    "        df_sra[df_sra.Run.isin(ddf.Run)].to_csv,\n",
+    "        \"sra_wastewater.csv\"\n",
+    "    )\n",
     "\n",
     "\n",
     "# Run app and display result inline in the notebook\n",
