--- a/sra_wastewater.ipynb
+++ b/sra_wastewater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,15 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/paulli/anaconda3/envs/dash/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (39,41,42,43,44,49,50,51,53,54,58,59,61,62,70,71,75,76,78,79,83,84,85,86,87,88,89,90,91,92,93,94,95,96,98,99,100,101,102,103,104,105,106,107,108,110,111,112,115,117,118,119,122,123,124,125,126,127,128,131,132,133,134,135,136,137,138,139,140,141,142,143) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+      "/Users/paulli/anaconda3/envs/dash/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning:\n",
+      "\n",
+      "Columns (39,41,42,43,44,49,50,51,53,54,58,59,61,62,70,71,75,76,78,79,83,84,85,86,87,88,89,90,91,92,93,94,95,96,98,99,100,101,102,103,104,105,106,107,108,110,111,112,115,117,118,119,122,123,124,125,126,127,128,131,132,133,134,135,136,137,138,139,140,141,142,143) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "\n"
      ]
     },
     {
@@ -426,7 +428,7 @@
        "[25972 rows x 148 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +516,7 @@
        "Length: 146, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,15 +527,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_61261/3058443914.py:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
-      "  df_sra.describe(include='all')\n"
+      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_61261/3058443914.py:1: FutureWarning:\n",
+      "\n",
+      "Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "\n"
      ]
     },
     {
@@ -977,7 +981,7 @@
        "[13 rows x 148 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1089,7 @@
        "freq           16538     24677                           9832  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1188,6 +1192,26 @@
       "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1ab3d7430>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1272,7 +1296,7 @@
     "\n",
     "\n",
     "# Run app and display result inline in the notebook\n",
-    "app.run_server(mode='jupyterlab', debug=True)"
+    "app.run_server(mode='inline', debug=True)"
    ]
   },
   {
