add sequencing center selector

--- a/sra_wastewater.ipynb
+++ b/sra_wastewater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,15 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/paulli/anaconda3/envs/dash/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (39,41,42,43,44,49,50,51,53,54,58,59,61,62,70,71,75,76,78,79,83,84,85,86,87,88,89,90,91,92,93,94,95,96,98,99,100,101,102,103,104,105,106,107,108,110,111,112,115,117,118,119,122,123,124,125,126,127,128,131,132,133,134,135,136,137,138,139,140,141,142,143) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+      "/Users/paulli/anaconda3/envs/dash/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning:\n",
+      "\n",
+      "Columns (39,41,42,43,44,49,50,51,53,54,58,59,61,62,70,71,75,76,78,79,83,84,85,86,87,88,89,90,91,92,93,94,95,96,98,99,100,101,102,103,104,105,106,107,108,110,111,112,115,117,118,119,122,123,124,125,126,127,128,131,132,133,134,135,136,137,138,139,140,141,142,143) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "\n"
      ]
     }
    ],
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,14 +86,14 @@
     "    'library_source': 'LibrarySource', \n",
     "    'platform': 'Platform', \n",
     "    'continent': 'geo_loc_name_country_continent',\n",
-    "    'country': 'geo_loc_name_country'\n",
+    "    'country': 'geo_loc_name_country',\n",
     "}\n",
     "dimensions_display = ['Assay Type', 'LibrarySource', 'Platform', 'geo_loc_name_country_continent']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,15 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_34435/3058443914.py:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
-      "  df_sra.describe(include='all')\n"
+      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_14865/3058443914.py:1: FutureWarning:\n",
+      "\n",
+      "Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "\n"
      ]
     },
     {
@@ -559,7 +563,7 @@
        "[13 rows x 148 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +699,7 @@
        "freq       24677                           9832  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,11 +764,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_stats(df):\n",
+    "    \"\"\" Get stats of Runs, BioSamples and BioProjects \"\"\"\n",
     "    sra_num = len(df)\n",
     "    biosample_num = len(df.BioSample.unique())\n",
     "    bioproj_num = len(df.BioProject.unique())\n",
@@ -774,27 +779,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_bases_stats(df):\n",
+    "    \"\"\" Get Mean AvgSpotLen and Mean Bases \"\"\"\n",
     "    idx = df[\"AvgSpotLen\"]!='N/A'\n",
     "    avgspotlen = df.loc[idx, \"AvgSpotLen\"].mean()\n",
     "    \n",
     "    idx = df[\"Bases\"]!='N/A'\n",
-    "    bases = df.loc[idx, \"Bases\"].mean()\n",
+    "    mbases = df.loc[idx, \"Bases\"].mean()/1e7\n",
     "\n",
-    "    return 'Mean AvgSpotLen: {:,.2f}bp, Mean Bases: {:,.2f}bp'.format(avgspotlen, bases)"
+    "    return 'Mean AvgSpotLen: {:,.2f} bp, Mean Bases: {:,.2f}M bp'.format(avgspotlen, mbases)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dropdown_div(dimensions_dict):\n",
+    "    \"\"\" Generate selection options based on the argument dict \"\"\"\n",
     "    input_list = []\n",
     "\n",
     "    # add selection option for coloring column\n",
@@ -806,7 +813,7 @@
     "            value='Assay Type',\n",
     "            options=options\n",
     "        ),\n",
-    "    ], style={'width': '12%', 'display': 'inline-block'})\n",
+    "    ], style={'width': '13%', 'display': 'inline-block'})\n",
     "\n",
     "    input_list.append(div)\n",
     "\n",
@@ -830,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +854,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1aa6e0cd0>"
+       "<IPython.lib.display.IFrame at 0x1a2b1c850>"
       ]
      },
      "metadata": {},
@@ -858,9 +865,6 @@
     "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
     "\n",
     "input_list = dropdown_div(dimensions_dict)\n",
-    "\n",
-    "fig = fig_parallel_categories(df, dimensions_display, 'Assay Type')\n",
-    "fig_sc = fig_spotlen_bases(df, 'Center Name')\n",
     "\n",
     "app.layout = html.Div([\n",
     "    html.H2(\n",
@@ -882,13 +886,18 @@
     "    ),\n",
     "    html.Div([\n",
     "        dcc.Graph(\n",
-    "            id='sra_sankey',\n",
-    "            figure=fig\n",
+    "            id='sra_sankey'\n",
     "        )\n",
-    "    ], style={'width': '90%', 'display': 'inline-block', 'padding': '10px 20px'}),\n",
+    "    ], style={'width': '100%', 'display': 'inline-block', 'padding': '10px 20px'}),\n",
+    "    html.Div([\n",
+    "        html.Label('Display selected sequencing center'),\n",
+    "        dcc.Dropdown(\n",
+    "            id='center_name_dropdown',\n",
+    "            multi=True\n",
+    "        )\n",
+    "    ],style={'padding': '15px 5px'}),\n",
     "    html.Div(\n",
     "        id='bases_stats_output',\n",
-    "        children='Mean AvgSpotLen: #, Mean Bases: #',\n",
     "        style={\n",
     "            'color': '#777777'\n",
     "        }\n",
@@ -896,28 +905,29 @@
     "    html.Div([\n",
     "        dcc.Graph(\n",
     "            id='sra_scatter',\n",
-    "            figure=fig_sc\n",
     "        )\n",
-    "    ], style={'width': '90%', 'display': 'inline-block', 'padding': '10px 20px'}),\n",
+    "    ], style={'width': '100%', 'display': 'inline-block', 'padding': '10px 20px'}),\n",
     "    html.Div([\n",
     "        dbc.Button(\"Export SRA\", color=\"primary\", id=\"btn_csv\", className=\"mr-1\"),\n",
     "        dcc.Download(id=\"download-dataframe-csv\")\n",
     "    ]),\n",
     "], style={'margin': '10px 20px'})\n",
     "\n",
-    "\n",
     "@app.callback(\n",
     "    Output('sra_sankey', 'figure'),\n",
     "    Output('sra_scatter', 'figure'),\n",
     "    Output('stats_output', 'children'),\n",
     "    Output('bases_stats_output', 'children'),\n",
+    "    Output('center_name_dropdown', 'options'),\n",
     "    Input('assay_type', 'value'),\n",
     "    Input('library_source', 'value'),\n",
     "    Input('platform', 'value'),\n",
     "    Input('continent', 'value'),\n",
     "    Input('country', 'value'),\n",
-    "    Input('colored_column', 'value'))\n",
-    "def update_graph(assay_type, library_source, platform, continent, country, colored_column):\n",
+    "    Input('colored_column', 'value'),\n",
+    "    [Input('center_name_dropdown', 'value')],\n",
+    ")\n",
+    "def update_graph(assay_type, library_source, platform, continent, country, colored_column, selected_center):\n",
     "    global ddf\n",
     "    ddf = df\n",
     "    if assay_type:\n",
@@ -932,12 +942,21 @@
     "        ddf = ddf[ddf[dimensions_dict['country']]==country]\n",
     "    if not colored_column:\n",
     "        colored_column = 'Assay Type'\n",
-    "    \n",
-    "    fig    = fig_parallel_categories(ddf, dimensions_display, colored_column)\n",
-    "    fig_sc = fig_spotlen_bases(ddf, color_col='Center Name')\n",
-    "    \n",
-    "    return fig, fig_sc, get_stats(ddf), get_bases_stats(ddf)\n",
     "\n",
+    "    fig = fig_parallel_categories(ddf, dimensions_display, colored_column)\n",
+    "    \n",
+    "    # generate options for center_name_dropdown\n",
+    "    options = [{'label': center_name, 'value': center_name} for center_name in ddf['Center Name'].unique()]\n",
+    "\n",
+    "    # cross-filtering with sequencing centers\n",
+    "    ddf_center = ddf\n",
+    "    if selected_center:\n",
+    "        ddf_center = ddf[ddf['Center Name'].isin(selected_center)]\n",
+    "    \n",
+    "    fig_sc = fig_spotlen_bases(ddf_center, color_col='Center Name')    \n",
+    "\n",
+    "\n",
+    "    return fig, fig_sc, get_stats(ddf), get_bases_stats(ddf_center), options\n",
     "\n",
     "@app.callback(\n",
     "    Output(\"download-dataframe-csv\", \"data\"),\n",
@@ -946,13 +965,33 @@
     ")\n",
     "def func(n_clicks):\n",
     "    global ddf\n",
-    "    return dcc.send_data_frame(\n",
-    "        df_sra[df_sra.Run.isin(ddf.Run)].to_csv,\n",
-    "        \"sra_wastewater.csv\"\n",
-    "    )\n",
+    "    if n_clicks is None:\n",
+    "        raise dash.exceptions.PreventUpdate\n",
+    "    else:\n",
+    "        content=df_sra[df_sra.Run.isin(ddf.Run)].to_csv(index=False)\n",
+    "        return dict(content=content, filename=\"sra_wastewater.csv\")\n",
     "\n",
     "# Run app and display result inline in the notebook\n",
+    "# app.run_server(mode='jupyterlab', debug=True)\n",
     "app.run_server(mode='inline', debug=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import plotly.express as px\n",
+    "# # px.set_mapbox_access_token(open(\".mapbox_token\").read())\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# fig = px.scatter_mapbox(df, lat=\"centroid_lat\", lon=\"centroid_lon\",     color=\"peak_hour\", size=\"car_hours\",\n",
+    "#                   color_continuous_scale=px.colors.cyclical.IceFire, size_max=15, zoom=10)\n",
+    "# fig.update_layout(mapbox_style=\"open-street-map\")\n",
+    "# fig.show()"
    ]
   },
   {
