--- a/sra_wastewater.ipynb
+++ b/sra_wastewater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/paulli/anaconda3/envs/dash/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning:\n",
-      "\n",
-      "Columns (39,41,42,43,44,49,50,51,53,54,58,59,61,62,70,71,75,76,78,79,83,84,85,86,87,88,89,90,91,92,93,94,95,96,98,99,100,101,102,103,104,105,106,107,108,110,111,112,115,117,118,119,122,123,124,125,126,127,128,131,132,133,134,135,136,137,138,139,140,141,142,143) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "\n"
+      "/Users/paulli/anaconda3/envs/dash/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (39,41,42,43,44,49,50,51,53,54,58,59,61,62,70,71,75,76,78,79,83,84,85,86,87,88,89,90,91,92,93,94,95,96,98,99,100,101,102,103,104,105,106,107,108,110,111,112,115,117,118,119,122,123,124,125,126,127,128,131,132,133,134,135,136,137,138,139,140,141,142,143) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
      ]
     }
    ],
@@ -44,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,17 +107,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_22765/3058443914.py:1: FutureWarning:\n",
-      "\n",
-      "Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
-      "\n"
+      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_30965/3058443914.py:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "  df_sra.describe(include='all')\n"
      ]
     },
     {
@@ -563,7 +559,7 @@
        "[13 rows x 148 columns]"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +838,7 @@
        "max          NaN                            NaN     72.000000    153.130478  "
       ]
      },
-     "execution_count": 177,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,41 +1004,57 @@
     "\n",
     "    # add selection option for coloring column\n",
     "    options = [{'label': key, 'value': val} for key, val in dimensions_dict.items()]\n",
-    "    div = html.Div([\n",
-    "        html.Label('Coloring'),\n",
-    "        dcc.Dropdown(\n",
-    "            id='colored_column',\n",
-    "            value='Assay Type',\n",
-    "            options=options\n",
-    "        ),\n",
-    "    ], style={'width': '13%', 'display': 'inline-block'})\n",
+    "    col = dbc.Col(\n",
+    "        children = [\n",
+    "            html.Label('Coloring'),\n",
+    "            dcc.Dropdown(\n",
+    "                id='colored_column',\n",
+    "                value='Assay Type',\n",
+    "                options=options\n",
+    "            ),\n",
+    "        ]\n",
+    "    )\n",
     "\n",
-    "    input_list.append(div)\n",
+    "    input_list.append(col)\n",
     "\n",
     "    # add selection options for dimensions_dict\n",
     "    for key in dimensions_dict:\n",
     "        dim = dimensions_dict[key]\n",
     "        available_idx = df[dim].unique()\n",
     "        options = [{'label': i, 'value': i} for i in available_idx]\n",
-    "        div = html.Div([\n",
-    "            html.Label(key),\n",
-    "            dcc.Dropdown(\n",
-    "                id=key,\n",
-    "                options=options\n",
-    "            ),\n",
-    "        ], style={'width': '12%', 'display': 'inline-block'})\n",
+    "        \n",
+    "        col = dbc.Col(\n",
+    "            children = [\n",
+    "                html.Label(key),\n",
+    "                dcc.Dropdown(\n",
+    "                    id=key,\n",
+    "                    options=options\n",
+    "                ),\n",
+    "            ]\n",
+    "        )\n",
     "\n",
-    "        input_list.append(div)\n",
+    "        input_list.append(col)\n",
     "        \n",
     "    return input_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
+    "input_list = dropdown_div(dimensions_dict)\n",
+    "\n",
+    "col = dbc.Col(\n",
+    "        children = [\n",
+    "            dbc.Button(\"Export SRA\", color=\"primary\", id=\"btn_csv\", className=\"mr-1\"),\n",
+    "            dcc.Download(id=\"download-dataframe-csv\")\n",
+    "        ]\n",
+    ")\n",
+    "\n",
+    "input_list.append(col)\n",
+    "\n",
     "layout_dcc = html.Div(\n",
     "    children=[\n",
     "        html.H2(\n",
@@ -1053,8 +1065,9 @@
     "            id='stats_output',\n",
     "            style={'color': '#777777'}\n",
     "        ),\n",
-    "        html.Div(\n",
+    "        dbc.Row(\n",
     "            input_list, \n",
+    "            align='end',\n",
     "            style={'padding': '15px 5px'}\n",
     "        ),\n",
     "        html.Div(\n",
@@ -1068,6 +1081,11 @@
     "            ],\n",
     "            style={'width': '100%', 'display': 'inline-block', 'padding': '10px 20px'}\n",
     "        ),\n",
+    "#         dbc.Row(\n",
+    "\n",
+    "#             justify=\"center\",\n",
+    "#             style={'padding': '15px 5px'}\n",
+    "#         ),\n",
     "        html.Div(\n",
     "            children=[\n",
     "                html.Label('Display selected sequencing center'),\n",
@@ -1104,12 +1122,6 @@
     "            ],\n",
     "            style={'width': '100%', 'display': 'inline-block', 'padding': '10px 20px'}\n",
     "        ),\n",
-    "        html.Div(\n",
-    "            children=[\n",
-    "                dbc.Button(\"Export SRA\", color=\"primary\", id=\"btn_csv\", className=\"mr-1\"),\n",
-    "                dcc.Download(id=\"download-dataframe-csv\")\n",
-    "            ]\n",
-    "        ),\n",
     "    ],\n",
     "    style={'margin': '10px 20px'}\n",
     ")"
@@ -1117,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1146,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1a8db31c0>"
+       "<IPython.lib.display.IFrame at 0x1a2e5e550>"
       ]
      },
      "metadata": {},
@@ -1143,8 +1155,6 @@
    ],
    "source": [
     "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.PULSE])\n",
-    "\n",
-    "input_list = dropdown_div(dimensions_dict)\n",
     "\n",
     "app.layout = layout_dcc\n",
     "\n",
@@ -1213,6 +1223,13 @@
     "# app.run_server(mode='jupyterlab', debug=True)\n",
     "app.run_server(mode='inline', debug=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
