--- a/sra_wastewater.ipynb
+++ b/sra_wastewater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,23 +75,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "dimensions_dict = {\n",
-    "    'assay_type': 'Assay Type', \n",
-    "    'library_source': 'LibrarySource', \n",
-    "    'platform': 'Platform', \n",
-    "    'continent': 'geo_loc_name_country_continent',\n",
-    "    'country': 'geo_loc_name_country',\n",
+    "    'Assay type': 'Assay Type', \n",
+    "    'Library source': 'LibrarySource', \n",
+    "    'Platform': 'Platform', \n",
+    "    'Continent': 'geo_loc_name_country_continent',\n",
+    "    'Country': 'geo_loc_name_country',\n",
     "}\n",
     "dimensions_display = ['Assay Type', 'LibrarySource', 'Platform', 'geo_loc_name_country_continent']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,15 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_30965/3058443914.py:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
-      "  df_sra.describe(include='all')\n"
+      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_32836/3058443914.py:1: FutureWarning:\n",
+      "\n",
+      "Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "\n"
      ]
     },
     {
@@ -559,7 +561,7 @@
        "[13 rows x 148 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +840,7 @@
        "max          NaN                            NaN     72.000000    153.130478  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,12 +911,12 @@
     "\n",
     "    fig.update_layout(\n",
     "        margin=dict(l=20, r=20, t=20, b=20),\n",
-    "        height=600\n",
+    "        height=600,\n",
     "    )\n",
     "    \n",
     "    fig.update_traces(\n",
     "        marker=dict(\n",
-    "            size=10,\n",
+    "            size=7,\n",
     "            opacity=0.6,\n",
     "            line=dict(\n",
     "                color='white',\n",
@@ -928,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,6 +1070,7 @@
     "        dbc.Row(\n",
     "            input_list, \n",
     "            align='end',\n",
+    "            no_gutters=True,\n",
     "            style={'padding': '15px 5px'}\n",
     "        ),\n",
     "        html.Div(\n",
@@ -1081,11 +1084,6 @@
     "            ],\n",
     "            style={'width': '100%', 'display': 'inline-block', 'padding': '10px 20px'}\n",
     "        ),\n",
-    "#         dbc.Row(\n",
-    "\n",
-    "#             justify=\"center\",\n",
-    "#             style={'padding': '15px 5px'}\n",
-    "#         ),\n",
     "        html.Div(\n",
     "            children=[\n",
     "                html.Label('Display selected sequencing center'),\n",
@@ -1129,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1144,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1a2e5e550>"
+       "<IPython.lib.display.IFrame at 0x1a293a730>"
       ]
      },
      "metadata": {},
@@ -1165,11 +1163,11 @@
     "    Output('stats_output', 'children'),\n",
     "    Output('bases_stats_output', 'children'),\n",
     "    Output('center_name_dropdown', 'options'),\n",
-    "    Input('assay_type', 'value'),\n",
-    "    Input('library_source', 'value'),\n",
-    "    Input('platform', 'value'),\n",
-    "    Input('continent', 'value'),\n",
-    "    Input('country', 'value'),\n",
+    "    Input('Assay type', 'value'),\n",
+    "    Input('Library source', 'value'),\n",
+    "    Input('Platform', 'value'),\n",
+    "    Input('Continent', 'value'),\n",
+    "    Input('Country', 'value'),\n",
     "    Input('colored_column', 'value'),\n",
     "    [Input('center_name_dropdown', 'value')],\n",
     ")\n",
@@ -1223,20 +1221,6 @@
     "# app.run_server(mode='jupyterlab', debug=True)\n",
     "app.run_server(mode='inline', debug=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
