--- a/sra_wastewater.ipynb
+++ b/sra_wastewater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,15 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/paulli/anaconda3/envs/dash/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (39,41,42,43,44,49,50,51,53,54,58,59,61,62,70,71,75,76,78,79,83,84,85,86,87,88,89,90,91,92,93,94,95,96,98,99,100,101,102,103,104,105,106,107,108,110,111,112,115,117,118,119,122,123,124,125,126,127,128,131,132,133,134,135,136,137,138,139,140,141,142,143) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+      "/Users/paulli/anaconda3/envs/dash/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning:\n",
+      "\n",
+      "Columns (39,41,42,43,44,49,50,51,53,54,58,59,61,62,70,71,75,76,78,79,83,84,85,86,87,88,89,90,91,92,93,94,95,96,98,99,100,101,102,103,104,105,106,107,108,110,111,112,115,117,118,119,122,123,124,125,126,127,128,131,132,133,134,135,136,137,138,139,140,141,142,143) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "\n"
      ]
     }
    ],
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_32836/3058443914.py:1: FutureWarning:\n",
+      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_33827/3058443914.py:1: FutureWarning:\n",
       "\n",
       "Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
       "\n"
@@ -561,7 +563,7 @@
        "[13 rows x 148 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +842,7 @@
        "max          NaN                            NaN     72.000000    153.130478  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,28 +1129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1a293a730>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/paulli/anaconda3/envs/dash/lib/python3.9/site-packages/jupyter_dash/jupyter_app.py:139: UserWarning:\n",
+      "\n",
+      "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -1175,15 +1167,15 @@
     "    global ddf\n",
     "    ddf = df\n",
     "    if assay_type:\n",
-    "        ddf = ddf[ddf[dimensions_dict['assay_type']]==assay_type]\n",
+    "        ddf = ddf[ddf[dimensions_dict['Assay type']]==assay_type]\n",
     "    if library_source:\n",
-    "        ddf = ddf[ddf[dimensions_dict['library_source']]==library_source]\n",
+    "        ddf = ddf[ddf[dimensions_dict['Library source']]==library_source]\n",
     "    if platform:\n",
-    "        ddf = ddf[ddf[dimensions_dict['platform']]==platform]\n",
+    "        ddf = ddf[ddf[dimensions_dict['Platform']]==platform]\n",
     "    if continent:\n",
-    "        ddf = ddf[ddf[dimensions_dict['continent']]==continent]\n",
+    "        ddf = ddf[ddf[dimensions_dict['Continent']]==continent]\n",
     "    if country:\n",
-    "        ddf = ddf[ddf[dimensions_dict['country']]==country]\n",
+    "        ddf = ddf[ddf[dimensions_dict['Country']]==country]\n",
     "    if not colored_column:\n",
     "        colored_column = 'Assay Type'\n",
     "\n",
@@ -1218,9 +1210,16 @@
     "        return dict(content=content, filename=\"sra_wastewater.csv\")\n",
     "\n",
     "# Run app and display result inline in the notebook\n",
-    "# app.run_server(mode='jupyterlab', debug=True)\n",
-    "app.run_server(mode='inline', debug=True)"
+    "app.run_server(mode='jupyterlab', debug=True)\n",
+    "# app.run_server(mode='inline', debug=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
