--- a/sra_wastewater.ipynb
+++ b/sra_wastewater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/paulli/anaconda3/envs/dash/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning:\n",
-      "\n",
-      "Columns (39,41,42,43,44,49,50,51,53,54,58,59,61,62,70,71,75,76,78,79,83,84,85,86,87,88,89,90,91,92,93,94,95,96,98,99,100,101,102,103,104,105,106,107,108,110,111,112,115,117,118,119,122,123,124,125,126,127,128,131,132,133,134,135,136,137,138,139,140,141,142,143) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "\n"
+      "/Users/paulli/anaconda3/envs/dash/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (39,41,42,43,44,49,50,51,53,54,58,59,61,62,70,71,75,76,78,79,83,84,85,86,87,88,89,90,91,92,93,94,95,96,98,99,100,101,102,103,104,105,106,107,108,110,111,112,115,117,118,119,122,123,124,125,126,127,128,131,132,133,134,135,136,137,138,139,140,141,142,143) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
      ]
     }
    ],
@@ -44,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,17 +107,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_33827/3058443914.py:1: FutureWarning:\n",
-      "\n",
-      "Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
-      "\n"
+      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_39901/3058443914.py:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "  df_sra.describe(include='all')\n"
      ]
     },
     {
@@ -563,7 +559,7 @@
        "[13 rows x 148 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +838,7 @@
        "max          NaN                            NaN     72.000000    153.130478  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,12 +904,13 @@
     "                     log_y=True,\n",
     "                     hover_name=\"Run\",\n",
     "                     hover_data=df.columns,\n",
-    "                     template=\"simple_white\",\n",
+    "                     template=\"seaborn\",\n",
     "    )\n",
     "\n",
     "    fig.update_layout(\n",
     "        margin=dict(l=20, r=20, t=20, b=20),\n",
-    "        height=600,\n",
+    "        height=500,\n",
+    "        showlegend=False\n",
     "    )\n",
     "    \n",
     "    fig.update_traces(\n",
@@ -932,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +955,8 @@
     "                            zoom=1)\n",
     "    fig.update_layout(\n",
     "        margin=dict(l=20, r=20, t=20, b=20),\n",
-    "        height=600\n",
+    "        height=500,\n",
+    "        showlegend=False\n",
     "    )\n",
     "\n",
     "    return fig"
@@ -966,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,27 +1098,31 @@
     "            id='bases_stats_output',\n",
     "            style={'color': '#777777'}\n",
     "        ),\n",
-    "        html.Div(\n",
+    "        dbc.Row(\n",
     "            children=[\n",
-    "                dcc.Loading(\n",
+    "                dbc.Col(\n",
     "                    children=[\n",
-    "                        dcc.Graph(id='sra_scatter')\n",
+    "                        dcc.Loading(\n",
+    "                            children=[\n",
+    "                                dcc.Graph(id='sra_geo')\n",
+    "                            ],\n",
+    "                            color='#AAAAAA'\n",
+    "                        )\n",
     "                    ],\n",
-    "                    color='#AAAAAA'\n",
-    "                )\n",
+    "                ),\n",
+    "                dbc.Col(\n",
+    "                    children = [\n",
+    "                        dcc.Loading(\n",
+    "                            children=[\n",
+    "                                dcc.Graph(id='sra_scatter')\n",
+    "                            ],\n",
+    "                            color='#AAAAAA'\n",
+    "                        )\n",
+    "                    ]\n",
+    "                ),\n",
     "            ],\n",
-    "            style={'width': '100%', 'display': 'inline-block', 'padding': '10px 20px'}\n",
-    "        ),\n",
-    "        html.Div(\n",
-    "            children=[\n",
-    "                dcc.Loading(\n",
-    "                    children=[\n",
-    "                        dcc.Graph(id='sra_geo')\n",
-    "                    ],\n",
-    "                    color='#AAAAAA'\n",
-    "                )\n",
-    "            ],\n",
-    "            style={'width': '100%', 'display': 'inline-block', 'padding': '10px 20px'}\n",
+    "            no_gutters=True,\n",
+    "            style={'padding': '15px 5px'}\n",
     "        ),\n",
     "    ],\n",
     "    style={'margin': '10px 20px'}\n",
@@ -1129,20 +1131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/paulli/anaconda3/envs/dash/lib/python3.9/site-packages/jupyter_dash/jupyter_app.py:139: UserWarning:\n",
-      "\n",
-      "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.PULSE])\n",
     "\n",
@@ -1210,8 +1201,8 @@
     "        return dict(content=content, filename=\"sra_wastewater.csv\")\n",
     "\n",
     "# Run app and display result inline in the notebook\n",
-    "app.run_server(mode='jupyterlab', debug=True)\n",
-    "# app.run_server(mode='inline', debug=True)"
+    "# app.run_server(mode='jupyterlab', debug=True)\n",
+    "app.run_server(mode='inline', debug=True)"
    ]
   },
   {
