convert input file to pkl format

--- a/sra_wastewater.ipynb
+++ b/sra_wastewater.ipynb
@@ -114,7 +114,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_39901/3058443914.py:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "/var/folders/85/m0d0qjm51wj7gw6dgr_05lvw0009b7/T/ipykernel_85974/3058443914.py:1: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
       "  df_sra.describe(include='all')\n"
      ]
     },
@@ -846,7 +846,6 @@
    "source": [
     "df = df_sra[['Run', 'BioSample', 'BioProject', 'AvgSpotLen', 'Bases', 'Center Name', 'geo_loc_name_country','lat_lon']+dimensions_display]\n",
     "df = df.fillna('N/A')\n",
-    "\n",
     "df[['lat','ns','lon','ew']] = df['lat_lon'].str.extract(f'^(\\S+) (\\w) (\\S+) (\\w)$', expand=True)\n",
     "\n",
     "# fix lon errors\n",
@@ -862,13 +861,25 @@
     "\n",
     "df = df.drop(columns=['lat_lon', 'ns', 'ew'])\n",
     "\n",
-    "ddf = df\n",
-    "ddf.describe(include='all')"
+    "df.describe(include='all')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "    \n",
+    "df.to_pickle(f'{filename}.pkl')\n",
+    "\n",
+    "ddf = pd.read_pickle(f'{filename}.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,9 +1142,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1a2382c10>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.PULSE])\n",
     "\n",
